# TradingNetwork

./: .env.sample  .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
network/migrations/: 0001_initial.py  0002_alter_product_company.py  0003_company_company_level.py  0004_alter_company_company_level.py
users/: permissions.py  urls.py
