[tool.poetry]
name = "tradingnetwork"
version = "0.1.0"
description = ""
authors = ["Tatyana Kavardaeva <tatyana.kavardaeva@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
django = "5.1.4"
psycopg2-binary = "2.9.10"
python-dotenv = "1.0.1"
pillow = "11.0.0"
ipython = "8.30.0"
djangorestframework = "^3.15.2"
flake8 = "^7.1.1"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
drf-yasg = "^1.21.8"
coverage = "^7.6.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
